--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    },
    "dependencies": {
       "d3": "^5.8.0",
+      "jquery": "^3.3.1",
       "uglify-es": "^3.3.9",
       "watchify": "^3.11.0"
    }
